Version 0.3.1
-------------
* Improved doctest syntax error message

Version 0.3.0
-------------
* Can now override sys.path when calling modname_to_modpath and is_modname_importable (api change)
* Added entry point script
* example command lines now use the full path if the module is not in the PYTHONPATH

Version 0.2.4
-------------
* added IGNORE_WANT directive
* added separator between printout of docsrc and its stdout

Version 0.2.3
-------------
* Print correct doctest line number in the traceback
* Runner on_error will now default to return instead of raise

Version 0.2.2
-------------
* Fixed option parsing bug in __main__ script


Version 0.2.1
-------------
* The default runtime state can be customized with the `--xdoc-options` command line argument.
* Fix crash when trying to read binary files
* Fix issue in _docstr_line_workaround


Version 0.2.0
-------------
* Starting a whats new changelog